<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/title_search"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.swapyapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.swapyapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_add_post"
        tools:layout="@layout/fragment_add_post" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.swapyapp.ui.feed.FeedFragment"
        android:label="@string/title_my_feed" />
</navigation>