<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragmentBG"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_search"
            android:textColor="@color/colorWhite80"
            android:textSize="25sp" />

        <SearchView
            android:id="@+id/search_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_form_input"
            android:closeIcon="@drawable/ic_clear_gray_24dp"
            android:iconifiedByDefault="false"
            android:maxWidth="500dp"
            android:queryHint="@string/hint_find_feed"
            android:searchIcon="@drawable/ic_search_purple_36dp">

        </SearchView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_scan_qr"
                android:layout_width="159dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_feed"
                android:drawableStart="@drawable/ic_scan_qr_24dp"
                android:text="@string/button_scan_qr"
                android:textColor="@color/colorWhite80"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_public_feed"
                android:layout_width="159dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_button_feed"
                android:drawableStart="@drawable/ic_public_purple_24dp"
                android:text="@string/button_public_feed"
                android:textColor="@color/colorWhite80" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/label_favorite_feeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/label_favorite_feeds"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/list_fav_feeds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:divider="@null" />

    </LinearLayout>


</LinearLayout>